fixed styling for garden-form to have error message highlighting and fixed formatting to be more readable

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -147,10 +147,9 @@ a {
 
 .required-field::after {
     content: "*";
-    color: red;
+    color: black;
     font-family: bold, serif;
 }
-
 
 .col-6 {
     flex: 0 0 auto;
